--- a/NanoProject/app/build.gradle
+++ b/NanoProject/app/build.gradle
@@ -25,5 +25,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'org.glassfish.main:javax.annotation:4.0-b33'
+    compile('de.keyboardsurfer.android.widget:crouton:1.8.5') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
