--- a/NanoProject/app/src/main/AndroidManifest.xml
+++ b/NanoProject/app/src/main/AndroidManifest.xml
@@ -4,26 +4,36 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-sdk android:minSdkVersion="19"
+    <uses-sdk android:minSdkVersion="11"
         android:maxSdkVersion="23"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".app.App">
+
         <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".ui.activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MovieListActivity"
+        <activity android:name=".ui.activity.MovieListActivity"
             android:configChanges="orientation|keyboardHidden"/>
+        <activity android:name=".ui.activity.MovieDetailActivity"/>
+        <provider
+            android:authorities="com.explore.archana.nanoproject.provider"
+            android:name="com.explore.archana.nanoproject.provider.MoviesProvider"
+            android:exported="true"
+            android:enabled="true"/>
     </application>
 
 </manifest>
